--- a/06 - HelloObjectify/.settings/org.eclipse.wst.common.component
+++ b/06 - HelloObjectify/.settings/org.eclipse.wst.common.component
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="06-HelloObjectify">
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
-        <property name="context-root" value="06-HelloObjectify"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <property name="java-output-path" value="/06-HelloObjectify/bin"/>
+        <property name="context-root" value="HelloObjectify"/>
     </wb-module>
 </project-modules>
